# foundry-core

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  release.toml  typos.toml
.config/: nextest.toml
.github/: NIGHTLY_TEST_FAILURE_TEMPLATE.md  dependabot.yml
.github/scripts/: changelog.sh  release.sh
.github/workflows/: ci.yml  release-compilers.yml  release-explorers.yml  release-fork-db.yml  release-foundry-blob-explorers.yml  release-foundry-block-explorers.yml  release-foundry-compilers.yml  release-foundry-fork-db.yml  release-foundry-wallets.yml  release-wallets.yml  release.yml  test-nightly.yml
crates/block-explorers/: CHANGELOG.md  cliff.toml  release.toml
crates/compilers/: CHANGELOG.md  README.md  cliff.toml
crates/compilers/crates/artifacts/artifacts/: Cargo.toml  README.md  release.toml
crates/compilers/crates/artifacts/solc/: Cargo.toml  README.md  release.toml
crates/compilers/crates/artifacts/solc/src/: bytecode.rs  contract.rs  error.rs  hh.rs  lib.rs  serde_helpers.rs  sourcemap.rs  sources.rs
crates/compilers/crates/artifacts/solc/src/ast/: mod.rs
crates/compilers/crates/artifacts/solc/src/remappings/: find.rs  mod.rs
crates/compilers/crates/artifacts/vyper/: Cargo.toml  README.md
crates/compilers/crates/artifacts/vyper/src/: lib.rs  settings.rs
crates/compilers/crates/compilers/: Cargo.toml  README.md  release.toml
crates/compilers/crates/compilers/src/: buildinfo.rs  cache.rs  config.rs  flatten.rs  lib.rs
crates/compilers/crates/compilers/src/artifact_output/: configurable.rs  mod.rs
crates/compilers/crates/compilers/src/cache/: iface.rs
crates/compilers/crates/compilers/src/compile/: many.rs  project.rs
crates/compilers/crates/compilers/src/compile/output/: contracts.rs  mod.rs  sources.rs
crates/compilers/crates/compilers/src/compilers/: mod.rs  multi.rs
crates/compilers/crates/compilers/src/compilers/solc/: compiler.rs  mod.rs
crates/compilers/crates/compilers/src/compilers/vyper/: mod.rs  parser.rs  settings.rs
crates/compilers/crates/compilers/src/project_util/: mock.rs  mod.rs
crates/compilers/crates/compilers/src/report/: mod.rs
crates/compilers/crates/compilers/src/resolver/: mod.rs  parse.rs
crates/compilers/crates/compilers/tests/: project.rs
crates/compilers/crates/core/: Cargo.toml  README.md
crates/compilers/crates/core/src/: error.rs
crates/compilers/crates/core/src/utils/: mod.rs  re.rs
crates/explorers/: CHANGELOG.md  README.md  cliff.toml
crates/explorers/blob-explorers/: Cargo.toml  README.md  release.toml
crates/explorers/block-explorers/: Cargo.toml  README.md  release.toml
crates/explorers/block-explorers/src/: account.rs  lib.rs  verify.rs
crates/explorers/block-explorers/tests/it/: account.rs  verify.rs
crates/fork-db/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
crates/fork-db/src/: backend.rs  cache.rs
crates/op/alloy-op-evm/: Cargo.toml
crates/op/alloy-op-evm/src/: lib.rs  tx.rs
crates/op/alloy-op-hardforks/: Cargo.toml
crates/op/alloy-op-hardforks/src/: lib.rs
crates/op/op-alloy-consensus/: Cargo.toml
crates/op/op-alloy-consensus/src/: alloy_compat.rs  lib.rs  post_exec.rs
crates/op/op-alloy-consensus/src/receipts/: deposit.rs  envelope.rs  receipt.rs
crates/op/op-alloy-consensus/src/transaction/: deposit.rs  envelope.rs  mod.rs  tx_type.rs
crates/op/op-alloy-network/: Cargo.toml
crates/op/op-alloy-network/src/: lib.rs
crates/op/op-alloy-rpc-types/: Cargo.toml
crates/op/op-alloy-rpc-types/src/: lib.rs  receipt.rs  transaction.rs
crates/op/op-alloy-rpc-types/src/transaction/: request.rs
crates/op/op-revm/: Cargo.toml
crates/op/op-revm/src/: fast_lz.rs  handler.rs  l1block.rs  precompiles.rs  result.rs  spec.rs
crates/op/op-revm/src/api/: default_ctx.rs
crates/op/op-revm/src/transaction/: abstraction.rs  deposit.rs  error.rs
crates/wallets/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
crates/wallets/src/: channel_db.rs  error.rs  lib.rs  opts.rs  utils.rs
crates/wallets/src/wallet_browser/: handlers.rs  mod.rs  queue.rs  router.rs  server.rs  signer.rs  state.rs  types.rs
crates/wallets/src/wallet_browser/app/assets/: main.js  styles.css
crates/wallets/src/wallet_multi/: mod.rs
