[package]
name = "foundry-wallets"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-signer = { workspace = true, features = ["eip712"] }
alloy-signer-local = { workspace = true, features = ["mnemonic", "keystore"] }
alloy-signer-ledger = { workspace = true, features = ["eip712"] }
alloy-signer-trezor.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true

# browser wallet
axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros"], optional = true }
uuid = { workspace = true, optional = true }
webbrowser = { version = "1.0.6", optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors", "set-header"], optional = true }

# aws-kms
alloy-signer-aws = { workspace = true, features = ["eip712"], optional = true }
aws-config = { version = "1", default-features = true, optional = true }

# gcp-kms
alloy-signer-gcp = { workspace = true, features = ["eip712"], optional = true }

# turnkey
alloy-signer-turnkey = { workspace = true, features = ["eip712"], optional = true }

# tempo
tempo-primitives = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }

async-trait.workspace = true
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
derive_builder = "0.20"
dirs.workspace = true
eyre.workspace = true
rpassword = "7"
serde.workspace = true
thiserror.workspace = true
toml = { workspace = true, optional = true }
tracing.workspace = true
eth-keystore = "0.5.0"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["browser", "tempo"]
browser = ["dep:axum", "dep:serde_json", "dep:tokio", "dep:uuid", "dep:webbrowser", "dep:tower", "dep:tower-http"]
tempo = ["dep:tempo-primitives", "dep:rusqlite", "dep:alloy-rlp", "dep:toml"]
aws-kms = ["dep:alloy-signer-aws", "dep:aws-config"]
gcp-kms = ["dep:alloy-signer-gcp"]
turnkey = ["dep:alloy-signer-turnkey"]
