[package]
name = "foundry-blob-explorers"
description = "Bindings for blobscan.com and other blob explorer APIs"
keywords = ["ethereum", "blobscan"]

version = "0.23.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-chains.workspace = true
alloy-primitives = { workspace = true, features = [
    "std",
    "serde",
] }

alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-eips.workspace = true

reqwest = { workspace = true, features = ["json", "query"] }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]
openssl = ["reqwest/native-tls"]

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
