[package]
name = "alloy-op-evm"
description = "OP EVM implementation"

version = "0.30.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Alloy Contributors", "OpLabsPBC"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ethereum-optimism/optimism"
repository = "https://github.com/ethereum-optimism/optimism"

[lints]
workspace = true

[dependencies]
alloy-evm = { workspace = true }

alloy-eips = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }

op-alloy-consensus = { workspace = true }

revm = { workspace = true }
op-revm = { workspace = true }

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std",
	"alloy-evm/std",
	"op-revm/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"op-alloy-consensus/std",
]
rpc = ["alloy-evm/rpc"]
asm-keccak = ["alloy-evm/asm-keccak", "alloy-primitives/asm-keccak", "revm/asm-keccak"]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-primitives/arbitrary",
	"op-alloy-consensus/arbitrary",
	"revm/arbitrary",
]
