[package]
name = "op-alloy-consensus"
description = "Optimism alloy consensus types"

version = "0.24.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ethereum-optimism/optimism"
repository = "https://github.com/ethereum-optimism/optimism"

[lints]
workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

# compat
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }

# arbitrary
arbitrary = { version = "1", features = ["derive"], optional = true }

# serde
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
	"alloy-eips/std",
	"alloy-consensus/std",
	"alloy-primitives/std",
	"alloy-rlp/std",
	"alloy-rpc-types-eth?/std",
	"alloy-serde?/std",
	"serde?/std",
]
alloy-compat = ["serde", "dep:alloy-network", "dep:alloy-rpc-types-eth"]
k256 = ["alloy-primitives/k256", "alloy-consensus/k256"]
kzg = ["alloy-eips/kzg", "alloy-consensus/kzg", "std"]
arbitrary = [
	"std",
	"dep:arbitrary",
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-primitives/rand",
	"alloy-primitives/arbitrary",
	"alloy-rpc-types-eth?/arbitrary",
	"alloy-serde?/arbitrary",
]
serde = [
	"dep:serde",
	"dep:alloy-serde",
	"alloy-primitives/serde",
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-rpc-types-eth?/serde",
]

