[package]
name = "op-revm"
description = "Optimism variant of Revm"
version = "17.0.0"
authors = ["Foundry Contributors"]
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/foundry-core"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true
auto_impl.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst"]
std = [
	"serde?/std",
	"revm/std",
]
serde = ["dep:serde", "revm/serde"]
portable = ["revm/portable"]

dev = [
	"revm/dev",
	"memory_limit",
	"optional_balance_check",
	"optional_block_gas_limit",
	"optional_eip3541",
	"optional_eip3607",
	"optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3541 = ["revm/optional_eip3541"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_no_base_fee = ["revm/optional_no_base_fee"]
optional_fee_charge = ["revm/optional_fee_charge"]

# See comments in `revm-precompile`
secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
blst = ["revm/blst"]
bn = ["revm/bn"]
