[package]
name = "foundry-compilers"
description = "Compiler abstraction and Foundry project implementation"

version = "0.20.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts = { version = "0.20.0", path = "../artifacts/artifacts", features = [
    "checksum",
    "walkdir",
    "rayon",
] }
foundry-compilers-core = { version = "0.20.0", path = "../core", features = ["hasher", "regex"] }
serde.workspace = true
semver.workspace = true
alloy-primitives.workspace = true
serde_json.workspace = true
tracing.workspace = true
alloy-json-abi.workspace = true
rayon.workspace = true
thiserror.workspace = true
path-slash.workspace = true
yansi.workspace = true
solar.workspace = true
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

auto_impl = "1.3.0"
winnow = "0.7.15"
dyn-clone = "1.0.20"
derive_more = { version = "2.1.1", features = ["debug"] }
itertools = ">=0.13, <=0.14"

# project-util
tempfile = { workspace = true, optional = true }
fs_extra = { workspace = true, optional = true }
rand = { version = "0.9.4", optional = true }

# svm
svm = { workspace = true, optional = true }
svm-builds = { package = "svm-rs-builds", version = "0.5.25", optional = true }
sha2 = { version = "0.11.0", default-features = false, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
fd-lock = "4.0.4"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest.workspace = true
tempfile.workspace = true
snapbox.workspace = true
foundry-compilers-core = { version = "0.20.0", path = "../core", features = ["test-utils"] }

[features]
default = ["rustls"]
test-utils = []

full = ["async", "svm-solc"]

# Adds extra `async` methods using `tokio` to some types.
async = [
    "dep:futures-util",
    "dep:tokio",
    "tokio/fs",
    "tokio/process",
    "tokio/io-util",
    "foundry-compilers-artifacts/async",
]
# Enables `svm` to auto-detect and manage `solc` builds.
svm-solc = [
    "dep:svm",
    "dep:svm-builds",
    "dep:sha2",
    "foundry-compilers-core/svm-solc",
]
# Utilities for creating and testing project workspaces.
project-util = [
    "dep:tempfile",
    "dep:fs_extra",
    "dep:rand",
    "svm-solc",
    "foundry-compilers-core/project-util",
]

rustls = ["svm?/rustls"]
openssl = ["svm?/openssl"]

[[test]]
name = "project"
path = "tests/project.rs"
required-features = ["full", "project-util", "test-utils"]

[[test]]
name = "mocked"
path = "tests/mocked.rs"
required-features = ["full", "project-util"]
