[package]
name = "foundry-compilers-artifacts"
description = "Rust bindings for compilers JSON artifacts"

version = "0.20.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts-solc = { version = "0.20.0", path = "../solc" }
foundry-compilers-artifacts-vyper = { version = "0.20.0", path = "../vyper" }

[features]
async = ["foundry-compilers-artifacts-solc/async"]
checksum = ["foundry-compilers-artifacts-solc/checksum"]
walkdir = ["foundry-compilers-artifacts-solc/walkdir"]
rayon = ["foundry-compilers-artifacts-solc/rayon"]
