[package]
name = "foundry-compilers-artifacts-vyper"
description = "Rust bindings for Vyper JSON artifacts"

version = "0.19.14"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-compilers-artifacts-solc.workspace = true
foundry-compilers-core.workspace = true

serde.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
semver.workspace = true

[dev-dependencies]
foundry-compilers-core = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
